// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiProgress color accent is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-accent"
/>
`;

exports[`EuiProgress color accentSecondary is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-accentSecondary"
/>
`;

exports[`EuiProgress color danger is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-danger"
/>
`;

exports[`EuiProgress color primary is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-primary"
/>
`;

exports[`EuiProgress color rgb(136, 85, 34) is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-customColor"
  style="color: rgb(136, 85, 34);"
/>
`;

exports[`EuiProgress color subdued is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-subdued"
/>
`;

exports[`EuiProgress color success is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-success"
/>
`;

exports[`EuiProgress color vis0 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis0"
/>
`;

exports[`EuiProgress color vis1 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis1"
/>
`;

exports[`EuiProgress color vis2 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis2"
/>
`;

exports[`EuiProgress color vis3 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis3"
/>
`;

exports[`EuiProgress color vis4 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis4"
/>
`;

exports[`EuiProgress color vis5 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis5"
/>
`;

exports[`EuiProgress color vis6 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis6"
/>
`;

exports[`EuiProgress color vis7 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis7"
/>
`;

exports[`EuiProgress color vis8 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis8"
/>
`;

exports[`EuiProgress color vis9 is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-vis9"
/>
`;

exports[`EuiProgress color warning is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-warning"
/>
`;

exports[`EuiProgress has labelProps 1`] = `
<div>
  <div
    class="euiProgress__data emotion-euiProgress__data"
  >
    <span
      class="euiProgress__valueText emotion-euiProgress__valueText-success"
      title="150"
    >
      150
    </span>
  </div>
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="euiProgress testClass1 testClass2 emotion-euiProgress-native-m-static-success-euiTestCss"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />
</div>
`;

exports[`EuiProgress has max 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="euiProgress testClass1 testClass2 emotion-euiProgress-native-m-static-success-euiTestCss"
  data-test-subj="test subject string"
  max="100"
/>
`;

exports[`EuiProgress has value 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress testClass1 testClass2 emotion-euiProgress-indeterminate-m-static-success-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress has valueText and label 1`] = `
<div>
  <div
    class="euiProgress__data emotion-euiProgress__data"
  >
    <span
      class="euiProgress__label emotion-euiProgress__label"
      title="Label"
    >
      Label
    </span>
    <span
      class="euiProgress__valueText emotion-euiProgress__valueText-success"
      title="150"
    >
      150
    </span>
  </div>
  <progress
    aria-hidden="true"
    aria-label="aria-label"
    class="euiProgress testClass1 testClass2 emotion-euiProgress-native-m-static-success-euiTestCss"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />
</div>
`;

exports[`EuiProgress is determinate 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="euiProgress testClass1 testClass2 emotion-euiProgress-native-m-static-success-euiTestCss"
  data-test-subj="test subject string"
  max="100"
  value="50"
/>
`;

exports[`EuiProgress is indeterminate 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress testClass1 testClass2 emotion-euiProgress-indeterminate-m-static-success-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress testClass1 testClass2 emotion-euiProgress-indeterminate-m-static-success-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress size l is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-l-static-success"
/>
`;

exports[`EuiProgress size m is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-m-static-success"
/>
`;

exports[`EuiProgress size s is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-s-static-success"
/>
`;

exports[`EuiProgress size xs is rendered 1`] = `
<div
  class="euiProgress emotion-euiProgress-indeterminate-xs-static-success"
/>
`;

exports[`EuiProgress valueText is true 1`] = `
<div>
  <div
    class="euiProgress__data emotion-euiProgress__data"
  >
    <span
      class="euiProgress__valueText emotion-euiProgress__valueText-success"
      title="50%"
    >
      50%
    </span>
  </div>
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="euiProgress testClass1 testClass2 emotion-euiProgress-native-m-static-success-euiTestCss"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />
</div>
`;
